--- a/ps03/.settings/com.google.gdt.eclipse.core.prefs
+++ b/ps03/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,4 +1,5 @@
-#Tue Jan 17 13:57:01 PST 2012
+#Sun Jan 29 13:26:50 PST 2012
 eclipse.preferences.version=1
+launchConfigExternalUrlPrefix=
 warSrcDir=war
 warSrcDirIsOutput=true
