--- a/ps03/war/WEB-INF/web.xml
+++ b/ps03/war/WEB-INF/web.xml
@@ -5,20 +5,20 @@
          version="2.5"
          xmlns="http://java.sun.com/xml/ns/javaee">
 
-  <!-- Servlets -->
+  <!-- Servlets 
   <servlet>
     <servlet-name>greetServlet</servlet-name>
-    <servlet-class>edu.caltech.cs141b.hw2.gwt.collab.server.CollaboratorServiceImpl</servlet-class>
+    <servlet-class>edu.caltech.cs141b.collaborator.server.CollaboratorServer</servlet-class>
   </servlet>
   
   <servlet-mapping>
     <servlet-name>greetServlet</servlet-name>
     <url-pattern>/collab/collab</url-pattern>
   </servlet-mapping>
-  
+  -->
   <!-- Default page to serve -->
   <welcome-file-list>
-    <welcome-file>collab.html</welcome-file>
+    <welcome-file>Collaborator.html</welcome-file>
   </welcome-file-list>
 
 </web-app>
