--- a/ps02/.settings/com.google.gdt.eclipse.core.prefs
+++ b/ps02/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,4 +1,5 @@
-#Tue Jan 17 13:57:01 PST 2012
+#Fri Feb 10 18:59:53 PST 2012
 eclipse.preferences.version=1
+jarsExcludedFromWebInfLib=
 warSrcDir=war
 warSrcDirIsOutput=true
