--- a/ps03/.settings/com.google.gdt.eclipse.core.prefs
+++ b/ps03/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,5 +1,6 @@
-#Sun Jan 29 13:26:50 PST 2012
+#Fri Feb 10 19:02:09 PST 2012
 eclipse.preferences.version=1
+jarsExcludedFromWebInfLib=
 launchConfigExternalUrlPrefix=
 warSrcDir=war
 warSrcDirIsOutput=true
