--- a/ps04/.classpath
+++ b/ps04/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gson-2.1-javadoc.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gson-2.1-sources.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gson-2.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/gwtprojsonserializer-1.0.4a.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
