--- a/ps04/war/WEB-INF/web.xml
+++ b/ps04/war/WEB-INF/web.xml
@@ -4,7 +4,7 @@
               http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          version="2.5"
          xmlns="http://java.sun.com/xml/ns/javaee">
-
+<!-- 
   <security-constraint>
     <web-resource-collection>
         <url-pattern>/*</url-pattern>
@@ -13,7 +13,7 @@
         <role-name>*</role-name>
     </auth-constraint>
   </security-constraint>
-
+-->
   <!-- Servlets -->
   <servlet>
     <servlet-name>greetServlet</servlet-name>
@@ -23,6 +23,16 @@
   <servlet-mapping>
     <servlet-name>greetServlet</servlet-name>
     <url-pattern>/Collaborator/collab</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>taskServlet</servlet-name>
+    <servlet-class>edu.caltech.cs141b.collaborator.server.TaskHandler</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>taskServlet</servlet-name>
+    <url-pattern>/Collaborator/tasks</url-pattern>
   </servlet-mapping>
   
   <!-- Default page to serve -->
