--- a/ps04/war/WEB-INF/web.xml
+++ b/ps04/war/WEB-INF/web.xml
@@ -36,6 +36,16 @@
   </servlet-mapping>
   
   <servlet>
+    <servlet-name>checkoutServlet</servlet-name>
+    <servlet-class>edu.caltech.cs141b.collaborator.server.CheckoutHandler</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>checkoutServlet</servlet-name>
+    <url-pattern>/Collaborator/checkout</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
     <servlet-name>disconnectServlet</servlet-name>
     <servlet-class>edu.caltech.cs141b.collaborator.server.DisconnectHandler</servlet-class>
   </servlet>
