fix login issue. changed name to cs141bob

--- a/ps04/war/WEB-INF/web.xml
+++ b/ps04/war/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
   <security-constraint>
     <web-resource-collection>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/</url-pattern>
     </web-resource-collection>
     <auth-constraint>
         <role-name>*</role-name>
