updated ps05 codebase.

--- a/ps05/Server/war/WEB-INF/web.xml
+++ b/ps05/Server/war/WEB-INF/web.xml
@@ -18,7 +18,7 @@
     
   <servlet>
     <servlet-name>collaboratorMessageServlet</servlet-name>
-    <servlet-class>edu.caltech.cs141b.hw5.gwt.collab.server.CollaboratorMessageServlet</servlet-class>
+    <servlet-class>edu.caltech.cs141b.hw5.server.CollaboratorMessageServlet</servlet-class>
   </servlet>
   
  <servlet-mapping>
