--- a/ps05/CollaboratorAndroid/AndroidManifest.xml
+++ b/ps05/CollaboratorAndroid/AndroidManifest.xml
@@ -2,13 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.caltech.cs141b.hw5.android"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0"
+    android:installLocation="preferExternal" >
 
-    <uses-sdk android:minSdkVersion="15" />
-
+    <uses-sdk android:minSdkVersion="10" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name" android:debuggable="true">
         <activity
             android:name=".CollaboratorAndroidActivity"
             android:label="@string/app_name" >
